--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-        <meta name="google-site-verification" content="your-verification-code" />
+    <meta name="google-site-verification" content="0lg-3wbt7hcLl9Vf_uR6vXcTlQ_vtKfBn6Ubwfzo8lc" />
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
